--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "local-reinit": "npm run docker-clear; npm run rm-migrates; npm run local-engine;",
     "gitpod-reinit": "npm run docker-clear; npm run rm-migrates; npm run gitpod-engine;",
     "gitpod-hasura-reattach": "export REATTACH_HASURA_SECRET=myadminsecretkey; export REATTACH_HASURA_PATH=$(echo $(gp url 8080) | awk -F[/:] '{print $4}'); export REATTACH_HASURA_SSL=1; export REATTACH_DEEPLINKS_PATH=$(echo $(gp url 3006) | awk -F[/:] '{print $4}'); npx gulp gitpod:hasura:reattach",
-    "codespaces-hasura-reattach": "export REATTACH_HASURA_SECRET=myadminsecretkey; export REATTACH_HASURA_PATH=localhost:8080; export REATTACH_HASURA_SSL=0; export REATTACH_DEEPLINKS_PATH=host.docker.internal:3006; npx gulp gitpod:hasura:reattach"
+    "codespaces-hasura-reattach": "export REATTACH_HASURA_SECRET=myadminsecretkey; export REATTACH_HASURA_PATH=localhost:8080; export REATTACH_HASURA_SSL=0; export REATTACH_DEEPLINKS_PATH=host.docker.internal:3006; npx gulp gitpod:hasura:reattach",
+    "codespaces-ports-settings": "gh codespace ports visibility 3006:public -c ${CODESPACE_NAME}"
   },
   "repository": {
     "type": "git",
